_old/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  namespace: image-registry
spec:
  serviceName: registry
  podManagementPolicy: "Parallel"
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - atys
      containers:
      - name: registry
        image: registry
        ports:
          - containerPort: 443
            name: http
        volumeMounts:
          - name: mnt
            mountPath: /var/lib/registry
          - name: certs
            mountPath: /certs
            readOnly: true
      volumes:
        - name: mnt
          persistentVolumeClaim:
            claimName: data
        - name: certs
          secret:
            secretName: tls-image-registry
