_old/svc-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: image-registry
spec:
  selector:
    app: registry
  ports:
    - name: https
      protocol: TCP
      port: 5000
      targetPort: 443
