_old/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
  name: api
  namespace: image-registry
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - image-registry.vo.elte.hu
    secretName: tls-image-registry
  rules:
  - host: image-registry.vo.elte.hu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry
            port:
              number: 5000
